# gladia-samples

./: .gitattributes  .gitignore  .prettierrc  CONTRIBUTING.md  README.md
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  validate-samples.yml
blogs/telnyx-solaria-python-fastapi/: blog.md
blogs/telnyx-solaria-python-fastapi/src/: README.md  server.py  vonage_example.xml
blogs/twilio-solaria-go/: blog.md
blogs/twilio-solaria-go/src/: README.md  env_setup.txt  go.mod  go.sum  main.go  twiml_example.xml
blogs/twilio-solaria-javascript/: .gitignore  blog.md  package-lock.json  package.json
blogs/twilio-solaria-javascript/src/: README.md  (+3 more)
blogs/twilio-solaria-python-fastapi/: blog.md
blogs/twilio-solaria-python-flask/: blog.md
blogs/twilio-solaria-typescript/: .gitignore  blog.md  package-lock.json  package.json
examples/gmeet-bot/: Dockerfile  build.sh  requirements.txt
go/go-speech-transcriber/: README.md  go-speech-transcriber.go  go.mod  go.sum
integrations-examples/OBS/: README.md  subtitles-with-chromakey.html
integrations-examples/discord/: README.md  gladia.js  index.js  package-lock.json  package.json
integrations-examples/gmeet-bot/: README.md  entrypoint.sh  gmeet.py  pulseaudio.conf  requirements.txt
integrations-examples/livekit-agent/: README.md  main.py  pyproject.toml
integrations-examples/pipecat-bot/: .env.example  README.md  main.py  pyproject.toml
integrations-examples/twilio/: .env.example  README.md  Readme.md  app.js  package-lock.json  package.json
javascript/: README.md  package-lock.json  package.json
javascript-browser/: README.md
javascript-browser/src/: index.html  live-from-file.html  live-from-microphone.html  pre-recorded.html  streaming.html
javascript/examples/: anonymized-call.js  call-sentiment-analysis.js  youtube-translation.js
javascript/http-request/: .env-example  package-lock.json  package.json
javascript/src/: env.js  file.js  live_helpers.js
php/: README.md
python/: .env.example  README.md  pyproject.toml
python/core-concepts/live/: live-from-file.py  live-from-microphone.py
python/core-concepts/pre-recorded/: pre_recorded.py  pre_recorded_async.py
python/examples/: anonymized_call.py  call_sentiment_analysis.py  meeting_summary.py  youtube_translation.py
python/src/: env.py  file.py  pyproject.toml  requirements.txt
python/src/V1_LEGACY/pre-recorded/: transcription.py
python/src/V1_LEGACY/streaming/: live-binary.py  live.py  microphone.py
python/src/basics/: pre-recorded.py  test_live_from_file.py  test_live_from_microphone.py
python/src/core-concepts/: live-from-file.py  live-from-microphone.py  pre-recorded-async.py  pre-recorded.py
python/src/pre-recorded/: transcription.py
python/src/pre-recorded/recordings/: transcript.json
python/src/pre_recorded/: multilingual_librispeech_benchmark.py  pre_recorded_file.py  pre_recorded_url.py
python/src/solutions/: anonymized-call.py  call-sentiment-analysis.py  meeting-summary.py  youtube-translation.py
python/src/streaming/: helper.py  live-binary.py  live-from-file-with-partials.py  live-from-file-with-resume.py  live-from-file.py  live-from-hls.py  live-from-microphone-with-resume.py  live-from-microphone.py  live-from-youtube.py  live.py  live_from_file.py  live_from_file_without_sdk.py  live_from_microphone.py  live_from_microphone_without_sdk.py  microphone.py
python/src/use-cases/: anonymized.py  youtube.py
scripts/: validate-sample-layout.sh
typescript/: .gitignore  README.md  interface.d.ts  package-lock.json  package.json  tsconfig.json
typescript/conf/: live-config.json  output-metadata.json  pre-recorded-config.json
typescript/examples/: anonymized-call.ts  call-sentiment-analysis.ts  meeting-summary.ts  youtube-translation.ts
typescript/src/: env.ts  file.ts  interface.d.ts  live_helpers.ts
typescript/websocket/: package.json
(+115 files in other folders)
