[project]
name = "gladia-python-samples"
version = "1.0.0"
description = "Samples for Gladia API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gladiaio-sdk>=0.5.0",
    "httpx>=0.28.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = true

# 0.5.x is developed in-repo; PyPI may lag. Install the sibling SDK package.

[project.scripts]
pre-recorded-file = "pre_recorded.pre_recorded_file:main"
pre-recorded-url = "pre_recorded.pre_recorded_url:main"
live-file = "streaming.live_from_file:main"
live-file-asyncio = "streaming.live_from_file_asyncio:main"
live-file-without-sdk = "streaming.live_from_file_without_sdk:main"
live-microphone = "streaming.live_from_microphone:main"
live-microphone-asyncio = "streaming.live_from_microphone_asyncio:main"
live-microphone-without-sdk = "streaming.live_from_microphone_without_sdk:main"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
# Sample scripts often embed long documentation URLs in comments.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
