[project]
name = "gladia-python-samples"
version = "1.0.0"
description = "Samples for Gladia API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gladiaio-sdk>=1.0.0",
    "httpx>=0.28.1",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8.0",
]

[tool.gladia.scripts]
pre-recorded-file = "python core-concepts/pre-recorded/pre_recorded.py"
pre-recorded-url = "python core-concepts/pre-recorded/pre_recorded_async.py"
live-file = "python core-concepts/live/live-from-file.py"
live-microphone = "python core-concepts/live/live-from-microphone.py"
anonymized-call = "python examples/anonymized_call.py"
call-sentiment-analysis = "python examples/call_sentiment_analysis.py"
meeting-summary = "python examples/meeting_summary.py"
youtube-translation = "python examples/youtube_translation.py"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
# Sample scripts often embed long documentation URLs in comments.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
